<resources>
    <string name="app_name">MovieCatalog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movies">Movies</string>
    <string name="tvshow">Tv Show</string>
    <string name="setting">Setting</string>
    <string name="original_language">Original Language</string>
    <string name="runtime">Runtime</string>
    <string name="revenue">Revenue</string>
    <string name="genre">Genre</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="description">Description</string>
    <string name="advanture">ADVANTURE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="pesan">Batalkan Menghapus Film Favorite ?</string>
    <string name="berhasil">Ya</string>
    <string name="released">Released</string>
</resources>
